--- a/midterm paper/mudasir_sohail.ipynb
+++ b/midterm paper/mudasir_sohail.ipynb
@@ -398,9 +398,9 @@
     "import pandas as pd\n",
     "\n",
     "data1 = {\n",
-    "    \"Name\" : {\"Ali\", \"Ahmed\", \"Hamza\"},\n",
-    "    \"Age\" : {20,25,30},\n",
-    "    \"Course\": {\"Data Science\", \"Digital Marketing\", \"Cloud Computing\"}\n",
+    "    \"Name\" : [\"Ali\", \"Ahmed\", \"Hamza\"],\n",
+    "    \"Age\" : [20,25,30],\n",
+    "    \"Course\": [\"Data Science\", \"Digital Marketing\", \"Cloud Computing\"]\n",
     "    }\n",
     "df = pd.DataFrame(data1)\n",
     "print(df)\n"
